@@ -1,3 +1,10 @@
+22/April/2020 - Version 6:
+
+ - Added new change login details function (Major!) (This took me so f**king long)
+ - Limited user login details storage to 9999 lines of information
+ - Minor bug fixes
+ - Changed strings and comments in code for better understanding
+
 22/April/2020 - Version 5:
 
  - Minor bug fixes
